<resources>
    <string name="app_name">TrainApp</string>
    <string name="welcome_text">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="students_made">Созданный студентами\n 2-ого курса</string>
    <string name="offer_registration_text">Зарегистрироваться</string>
    <string name="offer_login_text">Войти</string>
    <string name="have_account_text">Уже есть аккаунт?</string>
    <string name="textRules">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>

    <string name="login">Логин</string>
    <string name="entrance">Вход</string>
    <string name="registration">Регистрация</string>

    <string name="name">Имя или никнейм</string>
    <string name="password">Пароль</string>
    <string name="password_again">Повторите пароль</string>

    <string name="registration_image_desc">Иллюстрация процесса регистрации</string>
    <string name="map">Интерактивная карта с местоположением</string>

    <string-array name="genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string name="sex">Пол</string>
    <string name="man">Мужской</string>
    <string name="women">Женский</string>

    <string name="title_activity">Активность</string>
    <string name="title_personal">Профиль</string>
    <string name="blank">Мое</string>
    <string name="blank2">Не мое</string>
    <string name="title_my">Моя</string>
    <string name="title_users">Пользователей</string>

    <string name="title_never">Никогда</string>
    <string name="type_surfing">Серфинг</string>
    <string name="type_bicycle">Велосипед</string>
    <string name="type_jogging">Пробежка</string>
    <string name="type_swing">Качели</string>
    <string name="type_walking">Шаг</string>
    <string name="type_none">Пусто</string>
    <string name="item_activity_text_length">1.00 км</string>
    <string name="item_activity_text_time">1 часов 0 минут</string>
    <string name="item_activity_text_date">0 секунд назад</string>
    <string name="item_activity_text_email">\Ничего</string>
    <string name="item_activity_text_start">07:11</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="comment">Комментарий</string>
    <string name="start">Старт</string>
    <string name="delimiter">|</string>
    <string name="finish">Финиш</string>

    <string name="details">Детали</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit_button">Выйти</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_confirm">Повторите пароль</string>
    <string name="confirm">Принять</string>
    <string name="start_activity_button">Start activity button</string>

    <string name="go">Стартуем</string>
    <string name="start_activity">Начать</string>
</resources>