<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg_activity"
    android:paddingHorizontal="16dp"
    android:paddingTop="24dp"
    tools:context=".ui.startactivity.StartActivityFragment">

    <TextView
        android:id="@+id/activity_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/type_bicycle" />

    <TextView
        android:id="@+id/activity_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_type"
        tools:text="@string/item_activity_text_length" />

    <TextView
        android:id="@+id/activity_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_type"
        tools:text="00:00:00" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_length"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pause_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/start_activity_button"
            app:rippleColor="@color/white"
            app:borderWidth="0dp"
            android:backgroundTint="#E8DFFC"
            android:src="@drawable/ic_pause"
            app:layout_constraintBottom_toBottomOf="@+id/vp2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/finish_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:borderWidth="0dp"
            android:contentDescription="@string/start_activity_button"
            app:rippleColor="@color/blue"
            android:backgroundTint="@color/blue"
            android:src="@drawable/ic_flag"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/vp2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>